# P2_SDKManager

./: .gitignore  AutoUpdater.py  CMakeLists.txt  Doxyfile  README.md  changesettings.cpp  changesettings.h  changesettings.ui  createDoc.bat  createDoc.sh  docsRedirect.html  main.cpp  p2_sdkmanager.cpp  p2_sdkmanager.h  p2_sdkmanager.ui  settings.json
res/: P2_SDKManager.rc
web/html/: annotated.html  annotated_dup.js  changesettings_8h_source.html  class_change_settings-members.html  class_change_settings.html  class_change_settings.js  class_p2___s_d_k_manager-members.html  class_p2___s_d_k_manager.html  class_p2___s_d_k_manager.js  classes.html  files.html  files_dup.js  functions.html  functions_func.html  hierarchy.html  hierarchy.js  index.html  md__r_e_a_d_m_e.html  navtreedata.js  navtreeindex0.js  p2__sdkmanager_8h_source.html  pages.html
web/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_7.js  classes_0.js  classes_1.js  functions_0.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  pages_0.js  searchdata.js
